--- a/index.html
+++ b/index.html
@@ -18,9 +18,23 @@
             <p><b>Time to <span>BRAWL!</span> Team up with your friends and get ready for epic multiplayer <span>MAYHEM</span>! Brawl Stars is the newest game from the makers of Clash of Clans and Clash Royale. Jump into your favorite game mode and play quick matches with your friends. Shoot 'em up, blow 'em up, punch 'em out and win the <span>BRAWL</span>.</b></p>
             </article>
             </section>
-
+             <article>
             <p class="oo" ><i>Brawl Stars news</i></p>
-            <img class="news" src="https://brawlstars.inbox.supercell.com/xdjcscmv3zo3/5SVlOoMXobm5o65fbJPQ67/7bb6c7d24faa2df13c61710ac3846b0c/Thumb_800x433.png?w=800&h=433&fit=fill&f=center&fm=webp"height="150px"><img class="news"src="https://brawlstars.inbox.supercell.com/xdjcscmv3zo3/4lGIQWFxIVHiF2VgPRr4D1/91e05c526a2cf0587312aabd3ec85888/0102_Pizza_Planet_Event_inbox_800x433.png?w=800&h=433&fit=fill&f=center&fm=webp"height="150px">
+            </article>
+            <section class="flex">
+            <article class="news">
+            <img src="https://brawlstars.inbox.supercell.com/xdjcscmv3zo3/5SVlOoMXobm5o65fbJPQ67/7bb6c7d24faa2df13c61710ac3846b0c/Thumb_800x433.png?w=800&h=433&fit=fill&f=center&fm=webp"height="150px">
+            </article>
+            <article class="news">
+            <img src="https://brawlstars.inbox.supercell.com/xdjcscmv3zo3/4lGIQWFxIVHiF2VgPRr4D1/91e05c526a2cf0587312aabd3ec85888/0102_Pizza_Planet_Event_inbox_800x433.png?w=800&h=433&fit=fill&f=center&fm=webp"height="150px">
+            </article>
+            <article class="news">
+                <img src="https://brawlstars.inbox.supercell.com/xdjcscmv3zo3/ON2j8fOwN2vnF8wND6gRC/886e8f910ba3d76168b51f722e36889a/finx800.png?w=800&h=433&fit=fill&f=center&fm=webp"height="150px">
+            </article>
+             <article class="news">
+                <img src="https://brawlstars.inbox.supercell.com/xdjcscmv3zo3/5ic9rIkAFMdwIYoE9wCFoe/d75887a45a2a20d41432534ae5acc54c/0210_New_Ranked_Pass__In-game_Article__800x433.png?w=800&h=433&fit=fill&f=center&fm=webp"height="150px">
+            </article>
+            </section>
            
           <article class="dd">
             <p><b>To stay on <span>top of your game</span>, keep an eye on the in-game News section. Follow us on social media for the latest chatter and sneak peeks on what the team is working on. Don’t be a stranger and join the conversation.</b></p>
