--- a/index.html
+++ b/index.html
@@ -1,49 +1,54 @@
-<html>
-    <head>
-        <title></title>
-     <link rel="stylesheet"
-        href="styles.css">
-    </head>
-    <body>
-        <header>
-            <h1>𝙷𝙾𝚆 𝚃𝙾 𝙿𝙻𝙰𝚈 𝙸𝙽 𝙱𝚁𝙰𝚆𝙻 𝚂𝚃𝙰𝚁𝚂 2</h1>
-        </header>
-        <main>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>HOW TO PLAY IN BRAWL STARS 2</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <h1>HOW TO PLAY IN BRAWL STARS 2</h1>
+  </header>
+  
+  <main>
+    <section class="dd">
+      <article class="red">
+        <p><b>❗️There is a tutorial in the game that explains how to play, but if you need more help, you can always find it there.❗️</b></p>
+      </article>
+      <article class="gg">
+        <p><b>Time to <span>BRAWL!</span> Team up with your friends and get ready for epic multiplayer <span>MAYHEM</span>! Brawl Stars is the newest game from the makers of Clash of Clans and Clash Royale. Jump into your favorite game mode and play quick matches with your friends. Shoot 'em up, blow 'em up, punch 'em out, and win the <span>BRAWL</span>.</b></p>
+      </article>
+    </section>
 
-            <section class="dd">
-                <article class="red" >
-            <p ><b>❗️There is a tutorial in the game based on how to play,but if you need more help,you always can look for it right there.❗️</b></p>
-            </article>
-                <article class="gg" >
-            <p><b>Time to <span>BRAWL!</span> Team up with your friends and get ready for epic multiplayer <span>MAYHEM</span>! Brawl Stars is the newest game from the makers of Clash of Clans and Clash Royale. Jump into your favorite game mode and play quick matches with your friends. Shoot 'em up, blow 'em up, punch 'em out and win the <span>BRAWL</span>.</b></p>
-            </article>
-            </section>
-             <article>
-            <p class="oo" ><i>Brawl Stars news</i></p>
-            </article>
-            <section class="flex">
-            <article class="news">
-            <img src="https://brawlstars.inbox.supercell.com/xdjcscmv3zo3/5SVlOoMXobm5o65fbJPQ67/7bb6c7d24faa2df13c61710ac3846b0c/Thumb_800x433.png?w=800&h=433&fit=fill&f=center&fm=webp"height="150px">
-            </article>
-            <article class="news">
-            <img src="https://brawlstars.inbox.supercell.com/xdjcscmv3zo3/4lGIQWFxIVHiF2VgPRr4D1/91e05c526a2cf0587312aabd3ec85888/0102_Pizza_Planet_Event_inbox_800x433.png?w=800&h=433&fit=fill&f=center&fm=webp"height="150px">
-            </article>
-            <article class="news">
-                <img src="https://brawlstars.inbox.supercell.com/xdjcscmv3zo3/ON2j8fOwN2vnF8wND6gRC/886e8f910ba3d76168b51f722e36889a/finx800.png?w=800&h=433&fit=fill&f=center&fm=webp"height="150px">
-            </article>
-             <article class="news">
-                <img src="https://brawlstars.inbox.supercell.com/xdjcscmv3zo3/5ic9rIkAFMdwIYoE9wCFoe/d75887a45a2a20d41432534ae5acc54c/0210_New_Ranked_Pass__In-game_Article__800x433.png?w=800&h=433&fit=fill&f=center&fm=webp"height="150px">
-            </article>
-            </section>
-           
-          <article class="dd">
-            <p><b>To stay on <span>top of your game</span>, keep an eye on the in-game News section. Follow us on social media for the latest chatter and sneak peeks on what the team is working on. Don’t be a stranger and join the conversation.</b></p>
-            </article>
-           
-        </main>
-        <footer>
-           <p>Play here:<a href="https://supercell.com/en/games/brawlstars/">brawl stars</a></p>
+    <article>
+      <p class="oo"><i>Brawl Stars News</i></p>
+    </article>
 
-        </footer>
-    </body>
+    <section class="flex">
+      <article class="news">
+        <img 
+          src="https://brawlstars.inbox.supercell.com/xdjcscmv3zo3/5SVlOoMXobm5o65fbJPQ67/7bb6c7d24faa2df13c61710ac3846b0c/Thumb_800x433.png?w=800&h=433&fit=fill&f=center&fm=webp">
+      </article>
+      <article class="news">
+        <img 
+          src="https://brawlstars.inbox.supercell.com/xdjcscmv3zo3/4lGIQWFxIVHiF2VgPRr4D1/91e05c526a2cf0587312aabd3ec85888/0102_Pizza_Planet_Event_inbox_800x433.png?w=800&h=433&fit=fill&f=center&fm=webp">
+      </article>
+      <article class="news">
+        <img 
+          src="https://brawlstars.inbox.supercell.com/xdjcscmv3zo3/ON2j8fOwN2vnF8wND6gRC/886e8f910ba3d76168b51f722e36889a/finx800.png?w=800&h=433&fit=fill&f=center&fm=webp">
+      </article>
+      <article class="news">
+        <img 
+          src="https://brawlstars.inbox.supercell.com/xdjcscmv3zo3/5ic9rIkAFMdwIYoE9wCFoe/d75887a45a2a20d41432534ae5acc54c/0210_New_Ranked_Pass__In-game_Article__800x433.png?w=800&h=433&fit=fill&f=center&fm=webp">
+      </article>
+    </section>
+
+    <article class="dd">
+      <p><b>To stay on <span>top of your game</span>, keep an eye on the in-game News section. Follow us on social media for the latest chatter and sneak peeks on what the team is working on. Don’t be a stranger and join the conversation.</b></p>
+    </article>
+  </main>
+
+  <footer>
+    <p>Play here: <a href="https://supercell.com/en/games/brawlstars/">Brawl Stars</a></p>
+  </footer>
+</body>
 </html>
