--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<html lang="en">
+<html >
 <head>
-  <meta charset="UTF-8">
   <title>HOW TO PLAY IN BRAWL STARS 2</title>
   <link rel="stylesheet" href="styles.css">
 </head>
